# openai-image-mcp

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  generate_openai_images.py  index.html  providers.toml.example  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
batches/: audioscan-default-model-focused.json  directnet-mean-init-paper-figures.json  directnet-mean-init-singleflow-3drafts.json  rehearfit-data-selection-paper-figures.json  rehearfit-encoder-vs-lateshrink-3drafts.json  rehearfit-highfreq-balanced-paper-figures.json
docs/: development.md  ide-clients.md  install.md  subagent-review.md
plugins/openai-image/: LICENSE  README.md
plugins/openai-image/.codex-plugin/: plugin.json
plugins/openai-image/prompt_styles/: paper-figure.json
plugins/openai-image/skills/openai-image/: SKILL.md
plugins/openai-image/src/oepnai_image/: cli.py  workflow.py
prompt_styles/: dataviz-chord-diagram.json  dataviz-choropleth.json  dataviz-network-graph.json  dataviz-small-multiples.json  dataviz-treemap.json  research-biomedical.json  research-clinical.json  research-data.json  research-method.json  research-systems.json
skills/openai-image/: SKILL.md
src/oepnai_image/: capabilities.py  cli.py  config.py  mcp_server.py  providers.py  workflow.py
src/oepnai_image/prompt_styles/: paper-figure.json
tests/: test_capabilities.py  test_cli.py  test_config.py  test_mcp_server.py  test_providers.py  test_workflow.py
